--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mocha": "^7.1.2"
+    "mocha": "^7.1.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@stryker-mutator/core": "^3.2.4",
